--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,10 +1,14 @@
-influxdb:
-  url: "https://influx.example.com/"
-  org: "car-copilot"
-  token: ""
+# influxdb:
+#   url: "https://influx.example.com/"
+#   org: "car-copilot"
+#   token: ""
 
-pg:
-  connection: host=<host> user=car-copilot dbname=car-copilot sslmode=disable password=<password>
+# pg:
+#   connection: host=<host> user=car-copilot dbname=car-copilot sslmode=disable password=<password>
+
+http:
+  host: 0.0.0.0
+  port: 8080
 
 file: test/Samuel/Audi - A4 B8 - 2.0 TDI (2009)/2024-05-31 21-20-05.csv
 owner: Samuel
